Fixed stuttering on mobile, caused by long button presses.

--- a/elpolloloco/style.css
+++ b/elpolloloco/style.css
@@ -52,8 +52,12 @@ canvas{
 
     font-size: calc(300%);
     font-size: 10vw;
+}
 
-    user-select: none;
+/* FIX BUTTON STUTTERING */
+#controls .buttoon{
+	touch-action: none; touch-action: none; -webkit-touch-callout: none;    
+	user-select: none; -webkit-user-select: none;
 }
 
 @media screen and (max-width: 767px) {
